syntax = "proto3";

package ginnungagap.v1;

import "ginnungagap/v1/types.proto";

service RaftService {
  rpc AppendEntries   (RaftMessage)          returns (RaftMessage);
  rpc Vote            (RaftMessage)          returns (RaftMessage);
  rpc InstallSnapshot (stream RaftMessage)   returns (RaftMessage);
}

service AdminService {
  rpc ClusterStatus    (ClusterStatusRequest)    returns (ClusterStatusResponse);
  rpc AddLearner       (AddLearnerRequest)        returns (AddLearnerResponse);
  rpc ChangeMembership (ChangeMembershipRequest)  returns (ChangeMembershipResponse);
  rpc TransferLeader   (TransferLeaderRequest)    returns (TransferLeaderResponse);
}

message RaftMessage {
  bytes data = 1;
}

message ClusterStatusRequest {}

message ClusterStatusResponse {
  repeated NodeInfo nodes = 1;
  uint64 leader_id = 2;
  uint64 term = 3;
  uint64 last_applied = 4;
}

message AddLearnerRequest {
  NodeInfo node = 1;
}

message AddLearnerResponse {
  bool ok = 1;
  string error = 2;
}

message ChangeMembershipRequest {
  repeated uint64 node_ids = 1;
}

message ChangeMembershipResponse {
  bool ok = 1;
  string error = 2;
}

message TransferLeaderRequest {
  uint64 target_node_id = 1;
}

message TransferLeaderResponse {
  bool ok = 1;
  string error = 2;
}
